fixed calendar alignment issue

--- a/static/style.css
+++ b/static/style.css
@@ -200,6 +200,7 @@ footer {
 .calendar-body { margin: 0; padding: 0; background: white; border: 2px solid lightblue; }
 .calendar-body li {
 	list-style-type: none;
+	vertical-align: top;
 	display: inline-block;
 	width: 19%;
 	min-height: 80px;
